--- a/login/login.html
+++ b/login/login.html
@@ -6,21 +6,22 @@
     <bod>
         <div class="login-box">
             <h2>Login</h2>
-            <form action="">
+            <form action="" method="POST" id="loginform">
                 <div class="user-box">
-                    <input type="text" name="" required="">
-                    <label>Username</label>
+                    <input type="text" name="username" id="username" required>
+                    <label for="Username">Username</label>
                 </div>
                 <div class="user-box">
-                    <input type="password" name="" required="">
-                    <label for="">Password</label>
+                    <input type="password" name="password" id="password" required>
+                    <label for="Password">Password</label>
                 </div>
-                <button class="button">
+                <button class="button" id="login">
                     <a href="">
                         Submit
                     </a>
                 </button>
             </form>
         </div>
+        <script src="/scripts/script.js"></script>
     </bod>
 </html>
