--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -12,7 +12,10 @@
     <section id="sec1">
       <div id="div1">
         <h2>Flavour so good you’ll try to eat with your eyes</h2>
-        <p>Sample text. Click to select the Text Element.</p>
+        <p>
+          You can call us on the below number, we are always happy to be at your
+          service
+        </p>
         <div id="svgcontent">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -37,29 +40,29 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Food that makes you say wow.</p>
       </header>
       <article id="menu1">
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im1.jpg" alt="" />
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
@@ -68,32 +71,32 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Something hot. Something tasty.</p>
       </header>
       <article id="menu1">
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im2.jpg" alt="" />
       </article>
     </section>
 
@@ -108,29 +111,29 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Foodies welcome here.</p>
       </header>
       <article id="menu1">
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im4.webp" alt="" />
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
@@ -139,28 +142,28 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Hundreds of flavors under one roof.</p>
       </header>
       <article id="menu1">
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
