--- a/contact/index.html
+++ b/contact/index.html
@@ -10,9 +10,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <!-- My Css Files -->
+   <link rel="stylesheet" href="/CSS/web.css" />
+   <!-- Font Awesome -->
+   <link rel="stylesheet" href="/CSS/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+     <!-- Start Navigation Bar -->
+     <div class="navbar">
+        <div class="container">
+            <div class="brandName">
+                <h2> Restaurant</h2>
+            </div>
+            <ul class="links">
+                <li class="active"> <a href="#"> Home </a> </li>
+                <li> <a href="about.html" data-value="ser"> About </a> </li>
+                <li> <a href="#" data-value="test"> Menu </a> </li>
+                <li> <a href="#" data-value="port"> Contact </a> </li>
+                   
+            </ul>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <!-- End Navigation Bar -->
     <section class="section1">
         <div class="contact">
             <div class="info">
