--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -3,20 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="menu.css" />
      <!-- My Css Files -->
-     <link rel="stylesheet" href="CSS\web.css" />
+     <link rel="stylesheet" href="/CSS/web.css" />
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="CSS\font-awesome.min.css" />
+     <link rel="stylesheet" href="/CSS/font-awesome.min.css" /> 
+    <link rel="stylesheet" href="/style/menu.css" />
     <title>Document</title>
   </head>
   <body>
+     <!-- Start Navigation Bar -->
+     <div class="navbar">
+      <div class="container">
+          <div class="brandName">
+              <h2> Restaurant</h2>
+          </div>
+          <ul class="links">
+              <li class="active"> <a href="#"> Home </a> </li>
+              <li> <a href="about.html" data-value="ser"> About </a> </li>
+              <li> <a href="#" data-value="test"> Menu </a> </li>
+              <li> <a href="#" data-value="port"> Contact </a> </li>
+                 
+          </ul>
+          <div class="clearfix"></div>
+      </div>
+  </div>
+  <!-- End Navigation Bar -->
     <!-- #99E54D -->
     <!-- #F1AE0E -->
     <section id="sec1">
       <div id="div1">
         <h2>Flavour so good you’ll try to eat with your eyes</h2>
-        <p>Sample text. Click to select the Text Element.</p>
+        <p>
+          You can call us on the below number, we are always happy to be at your
+          service
+        </p>
         <div id="svgcontent">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -41,29 +61,29 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Food that makes you say wow.</p>
       </header>
       <article id="menu1">
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im1.jpg" alt="" />
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
@@ -72,32 +92,32 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Something hot. Something tasty.</p>
       </header>
       <article id="menu1">
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im2.jpg" alt="" />
       </article>
     </section>
 
@@ -112,29 +132,29 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Foodies welcome here.</p>
       </header>
       <article id="menu1">
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/im4.webp" alt="" />
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
@@ -143,28 +163,28 @@
     <section id="sec2">
       <header>
         <h1>Small Bites</h1>
-        <p>Sample text. Click to select the Text Element. Image from</p>
+        <p>Hundreds of flavors under one roof.</p>
       </header>
       <article id="menu1">
         <div id="divmenu1">
-          <p>Green papaya salad $12</p>
+          <p>Green papaya salad 160 EGP</p>
           <p>shrimp, chili & lime</p>
-          <p>Black pepper calamari $14</p>
+          <p>Black pepper calamari 190 EGP</p>
 
           <p>Galangal dressing, roasted rice, thai basil</p>
           <p>Tumeric spiced cauliflower $11</p>
 
           <p>Sesame tofu dressing, furikake</p>
-          <p>Kingfish sashimi $15</p>
+          <p>Kingfish sashimi 200 EGP</p>
 
           <p>Green nam jim, coconut & thai basil</p>
-          <p>Caramelised betel leaf $12</p>
+          <p>Caramelised betel leaf 160 EGP</p>
 
           <p>Pineapple, Chili</p>
-          <p>Pacific oysters (price per piece) $5</p>
+          <p>Pacific oysters (price per piece) 20 EGP</p>
 
           <p>Ponzu, sriracha</p>
-          <p>Thai chicken lettuce cups $13</p>
+          <p>Thai chicken lettuce cups 111 EGP</p>
 
           <p>Chilis, thai basil, crispy garlic, fried egg</p>
         </div>
