--- a/home/index.html
+++ b/home/index.html
@@ -92,24 +92,32 @@
     </header>
     <article id="mainwrapper">
       <section>
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/pizza.jpg" alt="" />
         <p class="food">hot pizza</p>
-        <button>read more</button>
+        <button onclick="window.location.href='/Menu/menu.html'">
+          read more
+        </button>
       </section>
       <section>
-        <img src="https://placehold.co/300x300" alt="" />
-        <p class="food">hot pizza</p>
-        <button>read more</button>
+        <img src="/image/salads.jpg" alt="" />
+        <p class="food">Salads</p>
+        <button onclick="window.location.href='/Menu/menu.html'">
+          read more
+        </button>
       </section>
       <section>
-        <img src="https://placehold.co/300x300" alt="" />
-        <p class="food">hot pizza</p>
-        <button>read more</button>
+        <img src="/image/dessert.jpg" alt="" />
+        <p class="food">dessert</p>
+        <button onclick="window.location.href='/Menu/menu.html'">
+          read more
+        </button>
       </section>
       <section>
-        <img src="https://placehold.co/300x300" alt="" />
-        <p class="food">hot pizza</p>
-        <button>read more</button>
+        <img src="/image/drinks.jpg" alt="" />
+        <p class="food">drinks</p>
+        <button onclick="window.location.href='/Menu/menu.html'">
+          read more
+        </button>
       </section>
       <!-- </article>                   askkkkk  -->
       <!-- <article id="arc2"> -->
@@ -125,11 +133,11 @@
           melancholy sympathize discretion led. Oh feel if up to till like.
         </p>
 
-        <img src="https://placehold.co/300x300" alt="" />
+        <img src="/image/chicken-salad.jpg" alt="" />
       </section>
     </article>
     <div id="divcover">
-      <div id="circle"><span>40%</span> business lunch</div>
+      <div id="circle"><span>40%</span> Business Lunch</div>
       <h2>Keep up to date with us</h2>
       <p>Sample text. Click to select the Text Element</p>
       <input type="text" /> <input type="button" value="SUBMIT" />
@@ -200,8 +208,8 @@
           </g>
         </svg>
 
-        <h2>chart to us</h2>
-        <h3>our friendly team is here to help</h3>
+        <h2>Chart to us</h2>
+        <h3>Our friendly team is here to help</h3>
         <p>hi@ourcompany.com</p>
       </div>
       <div class="introtext">
@@ -269,9 +277,9 @@
           </g>
         </svg>
 
-        <h2>office</h2>
-        <h3>come say hello at our office HQ</h3>
-        <p>location</p>
+        <h2>Office</h2>
+        <h3>Come say hello at our office HQ</h3>
+        <p>Location</p>
       </div>
       <div class="introtext">
         <svg
@@ -320,9 +328,9 @@
           </g>
         </svg>
 
-        <h2>phone</h2>
+        <h2>Phone</h2>
         <h3>Mon-Fri from 8am to 5pm</h3>
-        <p>hi@ourcompany.com</p>
+        <p>+1(555)000-000</p>
       </div>
     </article>
     <footer>
