--- a/CustomerOrder/customerOrder.html
+++ b/CustomerOrder/customerOrder.html
@@ -138,9 +138,20 @@
       >
         <aside id="rightSection" style="background-color: #99e54d">
           <div id="ccart">
+            <button
+              style="
+                padding: 20px;
+                font-size: 20px;
+                background-color: black;
+                color: white;
+              "
+              onclick="window.open('/Reservation/reservation.html','width=500px,height=500px')"
+            >
+              Make a reservation
+            </button>
             <p id="yourCart">Your Cart</p>
             <div id="default">
-              <p>resturant name - Zayed</p>
+              <p>Restaurant name - Zayed</p>
               <!-- <div > -->
               <table border="5">
                 <tr>
@@ -156,8 +167,17 @@
                   <td id="amount"></td>
                 </tr>
                 <tr>
-                  <td>
-                    <button>Proceed to checkout</button>
+                  <td colspan="2">
+                    <button
+                      style="
+                        padding: 20px;
+                        font-size: 15px;
+                        background-color: black;
+                        color: white;
+                      "
+                    >
+                      Proceed to checkout
+                    </button>
                   </td>
                 </tr>
               </table>
