cust order style and and send message update

--- a/CustomerOrder/customerOrder.html
+++ b/CustomerOrder/customerOrder.html
@@ -30,7 +30,7 @@
             <img class="imf" src="/image/im2.jpg" alt="" />
 
             <div>
-              <h3>Cheese Platter</h3>
+              <h3 id="p1">Cheese Platter</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
                 vero.
@@ -50,7 +50,7 @@
             <img class="imf" src="/image/im2.jpg" alt="" />
 
             <div>
-              <h3>Cheese Platter</h3>
+              <h3 id="p2">Cheese Platter</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
                 vero.
@@ -70,7 +70,7 @@
             <img class="imf" src="/image/im2.jpg" alt="" />
 
             <div>
-              <h3>Cheese Platter</h3>
+              <h3 id="p3">Cheese Platter</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
                 vero.
@@ -90,7 +90,7 @@
             <img class="imf" src="/image/im2.jpg" alt="" />
 
             <div>
-              <h3>Cheese Platter</h3>
+              <h3 id="p4">Cheese Platter</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
                 vero.
@@ -110,7 +110,7 @@
             <img class="imf" src="/image/im2.jpg" alt="" />
 
             <div>
-              <h3>Cheese Platter</h3>
+              <h3 id="p5">Cheese Platter</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
                 vero.
@@ -127,16 +127,8 @@
           </section>
         </article>
       </div>
-      <div
-        style="
-          width: '30%';
-          position: absolute;
-          margin-right: 20%;
-          top: 10%;
-          left: 80%;
-        "
-      >
-        <aside id="rightSection" style="background-color: #99e54d">
+      <div>
+        <aside id="rightSection" style="background-color: #404739">
           <div id="ccart">
             <button
               style="
@@ -169,6 +161,7 @@
                 <tr>
                   <td colspan="2">
                     <button
+                      onclick="SendMessage()"
                       style="
                         padding: 20px;
                         font-size: 15px;
