--- a/CustomerOrder/customerOrder.html
+++ b/CustomerOrder/customerOrder.html
@@ -26,7 +26,7 @@
           <img class="imf" src="https://placehold.co/300x300" alt="" />
           <img class="imf" src="https://placehold.co/300x300" alt="" />
 
-          <div>
+          <div  id="plate">
             <h3>Cheese Platter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
@@ -46,7 +46,7 @@
           <img class="imf" src="https://placehold.co/300x300" alt="" />
           <img class="imf" src="https://placehold.co/300x300" alt="" />
 
-          <div>
+          <div  id="plate">
             <h3>Cheese Platter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
@@ -66,7 +66,7 @@
           <img class="imf" src="https://placehold.co/300x300" alt="" />
           <img class="imf" src="https://placehold.co/300x300" alt="" />
 
-          <div>
+          <div  id="plate">
             <h3>Cheese Platter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
@@ -77,6 +77,7 @@
               style="float: inline-end"
               onclick="OrderNow(event)"
               class="plus3"
+              data-set="1"
             >
               +
             </button>
@@ -86,7 +87,7 @@
           <img class="imf" src="https://placehold.co/300x300" alt="" />
           <img class="imf" src="https://placehold.co/300x300" alt="" />
 
-          <div>
+          <div id="plate">
             <h3>Cheese Platter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
@@ -106,7 +107,7 @@
           <img class="imf" src="https://placehold.co/300x300" alt="" />
           <img class="imf" src="https://placehold.co/300x300" alt="" />
 
-          <div>
+          <div id="plate">
             <h3>Cheese Platter</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa,
@@ -152,7 +153,7 @@
               </tr>
               <tr>
                 <td>
-                  <button>Proceed to checkout</button>
+                  <button onclick=" window.location.href='/bill/bill.html'">Proceed to checkout</button>
                 </td>
               </tr>
             </table>
