--- a/about/about.html
+++ b/about/about.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
      <!-- My Css Files -->
-     <link rel="stylesheet" href="CSS\web.css" />
+     <link rel="stylesheet" href="/CSS/web.css" />
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="CSS\font-awesome.min.css" />
+     <link rel="stylesheet" href="/CSS/font-awesome.min.css" />
 </head>
 <body>
 
@@ -18,10 +18,10 @@
                     <h2> Restaurant</h2>
                 </div>
                 <ul class="links">
-                    <li> <a href="index.html" style="color:#000;"> Home </a> </li>
-                    <li class="active"> <a href="#" data-value="ser" style="color:#000;"> About </a> </li>
-                    <li> <a href="#" data-value="test" style="color:#000;"> Menu </a> </li>
-                    <li> <a href="#" data-value="port" style="color:#000;"> Contact </a> </li>
+                    <li> <a href="/home/index.html" style="color:#000;"> Home </a> </li>
+                    <li class="active"> <a href="/about/about.html" data-value="ser" style="color:#000;"> About </a> </li>
+                    <li> <a href="/Menu/menu.html" data-value="test" style="color:#000;"> Menu </a> </li>
+                    <li> <a href="/contact/index.html" data-value="port" style="color:#000;"> Contact </a> </li>
                        
                 </ul>
                 <div class="clearfix"></div>
@@ -35,7 +35,7 @@
         <div class="container">
                 <div class="left" style="float: left;">
                     <div class="about-img">
-                        <img class="img-fluid" src="images/about-img.png" />
+                        <img class="img-fluid" src="/images/about-img.png" />
                     </div>
                 </div>
                 <div class="right" style="float: right;">
