--- a/contact/index.html
+++ b/contact/index.html
@@ -24,10 +24,11 @@
                 <h2> Restaurant</h2>
             </div>
             <ul class="links">
-                <li class="active"> <a href="#"> Home </a> </li>
-                <li> <a href="about.html" data-value="ser"> About </a> </li>
-                <li> <a href="#" data-value="test"> Menu </a> </li>
-                <li> <a href="#" data-value="port"> Contact </a> </li>
+                <li> <a href="/home/index.html" style="color:#000;"> Home </a> </li>
+                    <li > <a href="/about/about.html" data-value="ser" style="color:#000;"> About </a> </li>
+                    <li> <a href="/Menu/menu.html" data-value="test" style="color:#000;"> Menu </a> </li>
+                    <li class="active"> <a href="/contact/index.html" data-value="port" style="color:#000;"> Contact </a> </li>
+                       
                    
             </ul>
             <div class="clearfix"></div>
