--- a/home/index.html
+++ b/home/index.html
@@ -28,9 +28,9 @@
             </div>
             <ul class="links">
                 <li class="active"> <a href="#"> Home </a> </li>
-                <li> <a href="about.html" data-value="ser"> About </a> </li>
-                <li> <a href="#" data-value="test"> Menu </a> </li>
-                <li> <a href="#" data-value="port"> Contact </a> </li>
+                <li> <a href="/about/about.html" data-value="ser"> About </a> </li>
+                <li> <a href="/Menu/menu.html" data-value="test"> Menu </a> </li>
+                <li> <a href="/contact/index.html" data-value="port"> Contact </a> </li>
                    
             </ul>
             <div class="clearfix"></div>
