--- a/menu/menu.html
+++ b/menu/menu.html
@@ -7,6 +7,7 @@
      <!-- My Css Files -->
      <link rel="stylesheet" href="CSS\web.css" />
      <!-- Font Awesome -->
+     <link rel="stylesheet" href="/style/menu.css">
      <link rel="stylesheet" href="CSS\font-awesome.min.css" />
     <title>Document</title>
   </head>
