--- a/home/index.html
+++ b/home/index.html
@@ -19,34 +19,17 @@
     <title>Document</title>
   </head>
   <body>
-<<<<<<< HEAD
-      <!-- Start Navigation Bar -->
-      <div class="navbar">
-        <div class="container">
-            <div class="brandName">
-                <h2> Restaurant</h2>
-            </div>
-            <ul class="links">
-                <li class="active"> <a href="#"> Home </a> </li>
-                <li> <a href="/about/about.html" data-value="ser"> About </a> </li>
-                <li> <a href="/Menu/menu.html" data-value="test"> Menu </a> </li>
-                <li> <a href="/contact/index.html" data-value="port"> Contact </a> </li>
-                   
-            </ul>
-            <div class="clearfix"></div>
-=======
     <!-- Start Navigation Bar -->
     <div class="navbar">
       <div class="container">
         <div class="brandName">
           <h2>Restaurant</h2>
->>>>>>> 9521dcb7ba4120dccf2d3a66aa838ad9847c2e98
         </div>
         <ul class="links">
-          <li class="active"><a href="#"> Home </a></li>
-          <li><a href="about.html" data-value="ser"> About </a></li>
-          <li><a href="#" data-value="test"> Menu </a></li>
-          <li><a href="#" data-value="port"> Contact </a></li>
+          <li class="active"><a href="/home/index.html"> Home </a></li>
+          <li><a href="/about/about.html" data-value="ser"> About </a></li>
+          <li><a href="/Menu/menu.html" data-value="test"> Menu </a></li>
+          <li><a href="/contact/index.html" data-value="port"> Contact </a></li>
         </ul>
         <div class="clearfix"></div>
       </div>
