--- a/CustomerOrder/customerOrder.html
+++ b/CustomerOrder/customerOrder.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/custOrder.css" />
     <style></style>
   </head>
@@ -124,7 +125,6 @@
           </div>
         </section>
       </article>
-      rgb(228, 146, 23)
       <aside id="rightSection" style="background-color: #99e54d">
         <div id="ccart">
           <p id="yourCart">Your Cart</p>
