--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- End Navigation Bar -->
     <section class="section1">
-        <div class="contact">
+        <form class="contact">
             <div class="info">
                 <h1>Contact Us </h1>
                 <p>Article evident arrived express highest men did boy. Mistress sensible entirely am so. Quick can manor smart money hopes worth too. Comfort produce husband boy her had hearing. Law others theirs passed but wishes. 
@@ -57,7 +57,7 @@
                 <input class="mass" type="text" required>
             </div>
             <input type="submit" value="submit" class="btn">
-        </div>
+        </form>
     </section>
     <section class="sect2">
         <div class="uptodate">
